Fixed upload csv button alignment, added all facilities card, added modal for error csv, toast for upload csv progress

--- a/portal/src/components/UploadCSV/UploadCSV.module.css
+++ b/portal/src/components/UploadCSV/UploadCSV.module.css
@@ -1,11 +1,11 @@
 .container {
-    background: #ffffff;
+    /* background: #ffffff;
     box-shadow: 0px 6px 20px #C1CFD933;
-    border-radius: 10px;
-    display: inline-flex;
-    width: calc(50% - 1rem);
-    margin-right: 1rem;
-    align-items: center;
+    border-radius: 10px; */
+    /* display: inline-flex;
+    width: calc(50% - 1rem); */
+    /* margin-right: 1rem;
+    align-items: center; */
 }
 
 .button {
@@ -31,4 +31,15 @@
 .progress-bar {
     color: #5C9EF8;
     text-align: right;
+}
+
+.toast-container{
+    background: #4E4E4E;
+    box-shadow: 0px 6px 20px #C1CFD933;
+    border-radius: 10px;
+    opacity: 1;
+}
+.toast-body{
+    display: flex;
+    justify-content: space-between;
 }
